:hammer: config routes, add icons and inital recommend bar

--- a/src/scss/component/Appbar.scss
+++ b/src/scss/component/Appbar.scss
@@ -22,5 +22,10 @@
       align-items: center;
       background-color: $bleuDeFrance;
     }
+
+    &-icon {
+      margin-left: rem(20);
+      cursor: pointer;
+    }
   }
 }
