--- a/src/scss/component/Button.scss
+++ b/src/scss/component/Button.scss
@@ -3,8 +3,13 @@
   cursor: pointer;
   padding: rem(10) rem(20);
   @include fontBase(16, $white);
-  transition: $normal-transition;
-  border: rem(1) solid $battleshipGrey;
+  transition: $fast-transition;
+  border: none;
+  -webkit-appearance: none;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
 
   &:hover {
     opacity: 0.5;
