--- a/src/scss/component/index.scss
+++ b/src/scss/component/index.scss
@@ -3,3 +3,5 @@
 @import "./MainLayout.scss";
 @import "./Input.scss";
 @import "./Button.scss";
+@import "./Icon.scss";
+@import "./RecommendBar.scss";
