--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import "./scss/index.scss";
+
 @font-face {
   font-family: "Montserrat";
   src: local("Montserrat"),
@@ -17,6 +19,12 @@ body {
     "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  //@include scrollbar();
+
+  a {
+    text-decoration: none;
+  }
 }
 
 code {
