--- a/src/scss/base/functions.scss
+++ b/src/scss/base/functions.scss
@@ -8,3 +8,47 @@
   line-height: rem($fontsize * 1.5);
   color: $color;
 }
+
+@mixin loadIcon($url, $width: 32, $height: 32) {
+  span {
+    background-image: url($url);
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 100%;
+    display: block;
+  }
+
+  height: rem($height);
+  width: rem($width);
+}
+
+@mixin scrollbar(
+  $color: $lightCarminePink,
+  $background-color: $snow,
+  $width: 8,
+  $height: 8
+) {
+  // For Chrome & Safari:
+  ::-webkit-scrollbar {
+    width: rem($width);
+    height: rem($height);
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: $color;
+    outline: 1px solid #1e202a;
+    border-radius: 50px;
+  }
+
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.2);
+  }
+
+  // For Firefox:
+  @-moz-document url-prefix() {
+    .scroller {
+      scrollbar-width: thin;
+      scrollbar-color: #1e202a;
+    }
+  }
+}
