--- a/src/scss/component/Appbar.scss
+++ b/src/scss/component/Appbar.scss
@@ -1,5 +1,5 @@
 .appbar {
-  height: rem(90);
+  height: rem(70);
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -14,13 +14,13 @@
 
     &-avatar {
       margin-left: rem(40);
-      width: rem(50);
-      height: rem(50);
+      width: rem(40);
+      height: rem(40);
       border-radius: 50%;
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: $bleuDeFrance;
+      background-color: $ruddyPink;
     }
 
     &-icon {
