--- a/src/scss/component/index.scss
+++ b/src/scss/component/index.scss
@@ -4,4 +4,6 @@
 @import "./Input.scss";
 @import "./Button.scss";
 @import "./Icon.scss";
-@import "./RecommendBar.scss";
+@import "./TitleBar.scss";
+@import "./VendorMiniForm.scss";
+@import "./VendorDrawer.scss";
