--- a/src/scss/base/functions.scss
+++ b/src/scss/base/functions.scss
@@ -9,7 +9,7 @@
   color: $color;
 }
 
-@mixin loadIcon($url, $width: 32, $height: 32) {
+@mixin loadIcon($url, $width: 24, $height: 24) {
   span {
     background-image: url($url);
     background-repeat: no-repeat;
@@ -36,8 +36,7 @@
 
   ::-webkit-scrollbar-thumb {
     background-color: $color;
-    outline: 1px solid #1e202a;
-    border-radius: 50px;
+    border-radius: rem(20);
   }
 
   ::-webkit-scrollbar-track {
