--- a/src/scss/component/Button.scss
+++ b/src/scss/component/Button.scss
@@ -1,5 +1,4 @@
 .button {
-  outline: none;
   cursor: pointer;
   padding: rem(10) rem(20);
   @include fontBase(16, $white);
@@ -10,18 +9,42 @@
   text-decoration: none;
   display: inline-block;
   cursor: pointer;
-
-  &:hover {
-    opacity: 0.5;
-  }
+  margin: 0;
+  display: inline-block;
 
   &-primary {
-    background-color: $ruddyPink;
+    background-color: $lightCarminePink;
     color: $white;
+
+    &:hover {
+      opacity: 0.9;
+    }
   }
 
   &-default {
-    background-color: $platinum;
+    background-color: $white;
     color: $black;
+
+    &:hover {
+      color: $lightCarminePink;
+    }
+  }
+
+  &-outlined {
+    @extend .button-default;
+    border: rem(1) solid $platinum;
+    &.primary {
+      border: rem(1) solid $lightCarminePink;
+      color: $lightCarminePink;
+
+      &:hover {
+        color: $white;
+        background-color: $lightCarminePink;
+      }
+    }
+  }
+
+  &-small {
+    padding: rem(8);
   }
 }
