--- a/src/scss/template/MyVendor.scss
+++ b/src/scss/template/MyVendor.scss
@@ -1,41 +1,73 @@
 .myVendor {
   flex-grow: 1;
+  background-color: $white;
 
-  &_drawer {
-    position: absolute;
-    right: 0;
-    top: 0;
-    visibility: hidden;
-    opacity: 0;
-    transition: $normal-transition;
+  &_contactTable {
+    overflow: auto;
+    margin-top: rem(30);
 
-    &.open {
-      visibility: visible;
-      opacity: 1;
+    &-table {
+      width: 100%;
+    }
+
+    &-headLine {
+      background-color: $ruddyPink05;
+    }
+
+    &-headItem {
+      white-space: nowrap;
+      padding: rem(10);
+    }
+    &-body {
+      min-height: rem(50);
+    }
+    &-row {
+      &:hover {
+        background-color: $ruddyPink015;
+      }
+
+      &.selected {
+        background-color: $ruddyPink03;
+      }
+    }
+    &-radio {
+      text-align: center;
+    }
+    &-data {
+      padding-top: rem(10);
+      padding-bottom: rem(10);
     }
   }
 
-  &_contentContainer {
-    padding: rem(16);
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    row-gap: rem(10);
-    column-gap: rem(10);
-    max-height: calc(100% - 108px);
-    overflow: auto;
-    @include max-desktop-down {
-      grid-template-columns: repeat(3, auto);
-    }
-    @include tablet-down {
-      grid-template-columns: repeat(2, auto);
-    }
-    @include mobile-down {
-      grid-template-columns: repeat(1, auto);
+  &_exportPdf {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: none;
+
+    &.show {
+      display: block;
     }
 
-    &.drawer-open {
-      margin-right: calc(50vw + 20px);
-      grid-template-columns: repeat(1, auto);
+    &-modal {
+      position: relative;
+      margin: auto;
+      padding: rem(32);
+      background-color: white;
+      height: calc(100% - 64px);
+    }
+    &-close {
+      position: absolute;
+      right: rem(10);
+      top: rem(10);
+      cursor: pointer;
+    }
+    &-pdfViewer,
+    iframe {
+      width: 100%;
+      height: 100%;
     }
   }
 }
