--- a/src/scss/template/RecommendVendor.scss
+++ b/src/scss/template/RecommendVendor.scss
@@ -24,13 +24,13 @@
     max-height: calc(100% - 108px);
     overflow: auto;
     @include max-desktop-down {
-      grid-template-columns: repeat(3, auto);
+      grid-template-columns: repeat(3, 1fr);
     }
     @include tablet-down {
-      grid-template-columns: repeat(2, auto);
+      grid-template-columns: repeat(2, 1fr);
     }
     @include mobile-down {
-      grid-template-columns: repeat(1, auto);
+      grid-template-columns: repeat(1, 1fr);
     }
 
     &.drawer-open {
