--- a/src/scss/template/index.scss
+++ b/src/scss/template/index.scss
@@ -1,3 +1,5 @@
 @import "./AddVendorForm.scss";
 @import "./RecommendVendor.scss";
 @import "./MyVendor.scss";
+@import "./AddContactForm.scss";
+@import "./MyContact.scss";
