--- a/src/scss/template/AddContactForm.scss
+++ b/src/scss/template/AddContactForm.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  overflow: auto;
 
   &_title {
     @include fontBase(32);
@@ -20,6 +21,10 @@
     &-content {
       display: flex;
       flex-grow: 1;
+
+      @include desktop-down {
+        flex-wrap: wrap;
+      }
     }
 
     &-left,
@@ -28,9 +33,17 @@
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
+
+      @include desktop-down {
+        flex: 0 0 100%;
+      }
     }
     &-right {
       margin-left: rem(30);
+
+      @include desktop-down {
+        margin-left: 0;
+      }
     }
 
     &-input {
@@ -40,10 +53,14 @@
     &-radio {
       &_title {
         @include fontBase(24);
+
+        @include desktop-down {
+          @include fontBase(20);
+        }
       }
 
       &_container {
-        margin-top: 10;
+        margin-top: rem(10);
         display: flex;
         justify-content: space-evenly;
       }
@@ -52,6 +69,11 @@
     &-section {
       @include fontBase(32);
       font-weight: bold;
+
+      @include desktop-down {
+        @include fontBase(28);
+        margin-top: rem(20);
+      }
     }
 
     &-actions {
