--- a/src/scss/template/AddVendorForm.scss
+++ b/src/scss/template/AddVendorForm.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  overflow: auto;
 
   &_title {
     @include fontBase(32);
@@ -20,6 +21,10 @@
     &-content {
       display: flex;
       flex-grow: 1;
+
+      @include desktop-down {
+        flex-wrap: wrap;
+      }
     }
 
     &-left,
@@ -28,14 +33,30 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+
+      @include desktop-down {
+        flex: 0 0 100%;
+      }
     }
     &-right {
       margin-left: rem(30);
+      @include desktop-down {
+        margin-left: 0;
+      }
     }
 
     &-section {
       @include fontBase(32);
       font-weight: bold;
+
+      @include desktop-down {
+        @include fontBase(28);
+        margin-top: rem(20);
+      }
+    }
+
+    &-input {
+      margin-top: rem(30);
     }
 
     &-actions {
