--- a/src/scss/component/TitleBar.scss
+++ b/src/scss/component/TitleBar.scss
@@ -4,12 +4,18 @@
   justify-content: space-between;
   align-items: center;
   padding: rem(10) rem(20);
+
+  @include mobile-down {
+    display: block;
+  }
+
   &_title {
     @include fontBase(32);
     font-weight: bold;
   }
   &_actions {
     display: flex;
+    align-items: center;
 
     &-btn {
       border: rem(1) solid $platinum;
