--- a/src/scss/template/MyContact.scss
+++ b/src/scss/template/MyContact.scss
@@ -53,8 +53,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: none;
 
     &.show {
@@ -78,6 +78,7 @@
     iframe {
       width: 100%;
       height: 100%;
+      @include scrollbar();
     }
   }
 }
