--- a/src/scss/template/EditHistory.scss
+++ b/src/scss/template/EditHistory.scss
@@ -1,25 +1,19 @@
-.myVendor {
+.editHistory {
   flex-grow: 1;
   background-color: $white;
-  overflow: auto;
   position: relative;
 
   &_contactTable {
-    margin-top: rem(30);
+    width: 100%;
     overflow: auto;
-
-    &-container {
-      width: 100%;
-      overflow: auto;
-      position: absolute;
-      left: 0;
-      right: 0;
-    }
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin-top: rem(30);
 
     &-table {
       width: 100%;
-      border-spacing: 0;
-      white-space: nowrap;
+
       th,
       td {
         min-width: rem(100);
@@ -38,7 +32,6 @@
       min-height: rem(50);
     }
     &-row {
-      cursor: pointer;
       &:hover {
         background-color: $ruddyPink015;
       }
@@ -85,20 +78,7 @@
     iframe {
       width: 100%;
       height: 100%;
-    }
-  }
-
-  &_drawer {
-    position: absolute;
-    right: 0;
-    top: 0;
-    visibility: hidden;
-    opacity: 0;
-    transition: $normal-transition;
-
-    &.open {
-      visibility: visible;
-      opacity: 1;
+      @include scrollbar();
     }
   }
 }
