--- a/src/scss/template/MyContact.scss
+++ b/src/scss/template/MyContact.scss
@@ -32,6 +32,7 @@
       min-height: rem(50);
     }
     &-row {
+      cursor: pointer;
       &:hover {
         background-color: $ruddyPink015;
       }
@@ -79,6 +80,20 @@
       width: 100%;
       height: 100%;
       @include scrollbar();
+    }
+  }
+
+  &_drawer {
+    position: absolute;
+    right: 0;
+    top: 0;
+    visibility: hidden;
+    opacity: 0;
+    transition: $normal-transition;
+
+    &.open {
+      visibility: visible;
+      opacity: 1;
     }
   }
 }
