--- a/src/scss/template/MyVendor.scss
+++ b/src/scss/template/MyVendor.scss
@@ -18,7 +18,6 @@
 
     &-table {
       width: 100%;
-      border-spacing: 0;
       white-space: nowrap;
       th,
       td {
@@ -33,6 +32,23 @@
     &-headItem {
       white-space: nowrap;
       padding: rem(10);
+
+      &:first-child {
+        display: flex;
+        align-items: center;
+
+        &::after {
+          content: "";
+          background-image: url("../../assets/icons/eye.png");
+          background-repeat: no-repeat;
+          background-size: contain;
+          height: 100%;
+          display: block;
+          width: rem(24);
+          height: rem(24);
+          margin-left: rem(10);
+        }
+      }
     }
     &-body {
       min-height: rem(50);
@@ -47,12 +63,9 @@
         background-color: $ruddyPink03;
       }
     }
-    &-radio {
-      text-align: center;
-    }
+    &-radio,
     &-data {
-      padding-top: rem(10);
-      padding-bottom: rem(10);
+      padding: rem(10);
     }
   }
 
