--- a/src/scss/component/TitleBar.scss
+++ b/src/scss/component/TitleBar.scss
@@ -1,12 +1,15 @@
 .titleBar {
-  background-color: $white;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: rem(10) rem(20);
+  &_container {
+    background-color: $white;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: rem(10) rem(20);
 
-  @include mobile-down {
-    display: block;
+    @include mobile-down {
+      display: block;
+    }
   }
 
   &_title {
@@ -24,14 +27,45 @@
       }
     }
 
+    &-export {
+      .button {
+        display: flex;
+        align-items: center;
+      }
+
+      .icon-export {
+        margin-right: rem(10);
+      }
+    }
+
     &-search-input {
-      max-width: 0;
+      max-width: 100%;
       visibility: hidden;
       transition: $normal-transition;
       overflow: hidden;
+      opacity: 0;
+      display: flex;
+      justify-content: center;
+      background-color: $white;
+      max-height: 0;
+
       &.show {
-        max-width: rem(260);
+        opacity: 1;
         visibility: visible;
+        max-height: rem(50);
+        transition: $normal-transition;
+
+        .input {
+          width: 100%;
+          justify-content: center;
+          transition: $normal-transition;
+        }
+
+        .input_inputContainer {
+          max-width: 80%;
+          width: 100%;
+          transition: $normal-transition;
+        }
       }
     }
   }
