--- a/src/scss/template/MyContact.scss
+++ b/src/scss/template/MyContact.scss
@@ -92,8 +92,7 @@
       top: rem(10);
       cursor: pointer;
     }
-    &-pdfViewer,
-    iframe {
+    &-pdfViewer {
       width: 100%;
       height: 100%;
       @include scrollbar();
