--- a/src/scss/template/MyVendor.scss
+++ b/src/scss/template/MyVendor.scss
@@ -26,7 +26,8 @@
     }
 
     &-headLine {
-      background-color: $ruddyPink05;
+      background-color: rgb(164, 238, 238);
+      font: bold;
     }
 
     &-headItem {
@@ -70,6 +71,7 @@
     &-data {
       padding: rem(10);
     }
+   
   }
 
   &_exportPdf {
